--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -1,3 +1,10 @@
+<%- content_for :nav do %>
+  <li><a href="issues/1">First Issue</a></li>
+<%- end %>
+
+<%- content_for :nav do %>
+  <li><a href="issues/1">First Issue</a></li>
+<%- end %>
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Issues</h1>
