--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <ul>
+    <li><a href="/issues">Issues</a></li>
+    <li><a href="/issues/new">New Issue</a></li>
+    <%= yield :nav %>
+  </ul>
 
 <%= yield %>
 
