--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -1,13 +1,7 @@
-<%- content_for :nav do %>
-  <li><a href="issues/1">First Issue</a></li>
-<%- end %>
-
-<%- content_for :nav do %>
-  <li><a href="issues/1">First Issue</a></li>
-<%- end %>
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Issues</h1>
+<%=render 'search' %>
 
 <table>
   <thead>
