--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 </head>
 <body>
   <ul>
+    <li><a href="/timeline/index">Timeline</a></li>
     <li><a href="/issues">Issues</a></li>
     <li><a href="/issues/new">New Issue</a></li>
     <%= yield :nav %>
